<resources>
    <string name="app_name">MyPlace</string>
    <string name="email_Id">Enter your email</string>
    <string name="welcome_text">Enter Email or Job Number</string>
    <string name="forget_pass">Forgot Password </string>
    <string name="single">Single</string>
    <string name="myplace_heading">A house is made of walls and beams,<br /> a home is made of love and dreams.</string>
    <string name="myplace_app_message">MyPlace App Message</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Use FingerPrint Authentication</string>
    <string name="ok">Ok</string>
    <string name="burbank_homes">Burbank Homes</string>
    <string name="my">Burbank Homes</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="fingerprint_hint">Use Touch sensor</string>
    <string name="password">Password</string>
    <string name="no_records_found">No records found</string>
    <string name="fingure_print"><u>Use FingerPrint</u></string>
    <string name="Terms">All photos and illustrations are representative and are to be used as a guide only. Floorplans
        and specifications may be varied by Burbank without notice, the dimensions are diagrammatic only and a Building
        Contract with final drawings will display the final dimensions and detail. The inclusion of furniture, floor coverings,
        wall paper, artwork, curtains, light fittings, lawns, planter boxes, fences, driveways, footpaths, patios and pergolas
        are intended merely as a guide and are not included in the price unless otherwise listed independently. All designs are
        the property of Burbank Group and must not be used, reproduced, copied or varied, wholly or in part without written permission
        from an authorised Burbank representative. All information provided on Burbank Group websites is provided for information
        purposes only and does not constitute a legal contract between Burbank Australia and any person or entity unless otherwise specified.
        This information is subject to change without prior notice. And while every reasonable effort is made to ensure current and accurate
        information is presented, Burbank Australia makes no guarantees of any kind. At times sites under Burbank Australia’s control may
        link to external sites or may contain community-based forums. Burbank Australia does not control, monitor or guarantee the
        information contained in these sites or information contained in links to other external websites, and does not endorse any
        views expressed or products or services offered therein. In no event shall Burbank Australia be responsible or liable,
        directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with the use of or
        reliance on any such content, goods, or services available on or through any such site or resource.</string>
    <string name="aboutBurbankText">Password</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="partner">Partner</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="progress">PROGRESS</string>
    <string name="details">DETAILS</string>
    <string name="photos">PHOTOS</string>
    <string name="documents">DOCUMENTS</string>
    <string name="finance">FINANCE</string>
    <string name="title_activity_dashboard_new">DashboardNewActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu">Menu</string>
    <string name="dashboard_app_name">BURBANK MYPLACE</string>
    <string name="bottom_progress">Progress</string>
    <string name="bottom_details">Details</string>
    <string name="bottom_photos">Photos</string>
    <string name="bottom_documents">Documents</string>
    <string name="bottom_finance">Finance</string>
    <string name="myprogress">MyProgress</string>
    <string name="mydetails">MyDetails</string>
    <string name="your_home_is_currently">Your home is currently <b>%s</b> \n completed.\n Swipe to see your stages.</string>
    <string name="text_desc">Lorem ipsum dolor sit amet, consector adipiscing elisted</string>
    <string name="see_more">SEE MORE</string>
    <string name="progress_percentage">%s Progress</string>
    <string name="your_overall_progress">Your Overall Progress</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_is_the">What is the %s?</string>
    <string name="lorem_ipsum_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="completion_date">Completion Date</string>
    <string name="completed">Completed</string>
    <string name="complete">Complete</string>
    <string name="three_dots">…</string>
    <string name="my_build_details">My Build Details</string>
    <string name="my_build_details_information">Job Number %s\nFull Job Address\n%s</string>
    <string name="my_contract_details">My Contract Details</string>
    <string name="contract_status">Contract Status</string>
    <string name="contract_value">Contract Value : </string>
    <string name="supervisor">Supervisor</string>
    <string name="new_home_consultant">New Home Consultant</string>
    <string name="site_start_date">Site Start Date</string>
    <string name="something_went_wrong">Something went wrong due to server problem</string>
    <string name="my_details">MyDetails</string>
    <string name="phone_s">Phone %s</string>
    <string name="mobile_s">Mobile %s</string>
    <string name="work_s">Work %s</string>
    <string name="email_s">Email %s</string>
    <string name="job_number">Job Number</string>
    <string name="full_job_address">Full Job Address</string>
    <string name="home_design">Home Design</string>
    <string name="facade">Facade</string>
    <string name="my_photos">MyPhotos</string>
    <string name="my_photos_details">Here\'s your most recent site photos.\nTab below to see all.</string>
    <string name="no_photos_details">No photos available for this job number.</string>
    <string name="No_recent_photos">No recent photos</string>
    <string name="see_all_photos">See all photos</string>
    <string name="view_favourites">View Favourites</string>
    <string name="search">Search</string>
    <string name="my_documents">MyDocuments</string>
    <string name="my_document_details">Find all the documents relate to your home build.</string>
    <string name="logout">LogOut</string>
    <string name="tap_for_more_information">Tap for more information</string>
    <string name="load_more">LOAD MORE</string>
    <string name="my_finance">MyFinance</string>
    <string name="variations_to_date">Variations to Date</string>
    <string name="approved_variations">Approved Variations :</string>
    <string name="adjusted_contract_value">Adjusted Contract Value :</string>
    <string name="claims_to_date">Claims to Date</string>
    <string name="receipts_to_date">Receipts to Date</string>
    <string name="total_received">Total Received :</string>
    <string name="total_claimed">Total Claimed :</string>
    <string name="balance_due">Balance Due : </string>
    <string name="myappointments">MyAppointments</string>
    <string name="my_appointments_details">Find all the appointments related to your home build.</string>
    <string name="myhistory">MyHistory</string>
    <string name="myhistory_desc">Find all the history related to your home build.</string>
    <string name="mycontacts">MyContacts</string>
    <string name="mycontact_desc">Find all the contacts related to your home build.</string>
    <string name="mysupport">MySupport</string>
    <string name="mynotifications">MyNotifications</string>
    <string name="mysettings">MySettings</string>
    <string name="MyJobNumber">MyHomes</string>
    <string name="your_home_is_currently_completed">is currently\n</string>
    <string name="settings_header_desc">Find all the settings related to\nyour home build.</string>
    <string name="save">Save</string>
    <string name="info_centre">Info Centre</string>
    <string name="info_centre_description">Helpful videos and information to explain some of the stages in your build and what you need to know.</string>
    <string name="faqs">FAQs</string>
    <string name="faqs_description">Find answers to our most Frequently Asked Questions.</string>
    <string name="contact_us">Contact Us</string>
    <string name="select_job_number">ASSOCIATED JOB NUMBERS</string>
    <string name="select_job_number_helptext">* Access other job numbers from menu option \"MyHomes\"</string>
    <string name="what_would_you_like_to_do_today">What would you like to do today</string>
    <string name="build_process">Build Process</string>
    <string name="home_care">Home Care</string>
    <string name="REPORT_MINOR_DEFECTS">REPORT MINOR DEFECTS</string>
    <string name="REPORT_OTHER_ISSUES">REPORT OTHER ISSUES</string>
    <string name="SELECT_YOUR_ISSUE_TYPE">SELECT YOUR ISSUE TYPE</string>
    <string name="PRODUCT_WARRANTY">PRODUCT WARRANTY</string>
    <string name="STRUCTURAL_ISSUE">STRUCTURAL ISSUE</string>
    <string name="OTHER_ISSUE">OTHER ISSUE</string>
    <string name="notes">notes</string>
    <string name="list">list</string>
    <string name="login_user_data">LoginUserData</string>
    <string name="view_the_status_of">View the status of</string>
    <string name="my_home_building">my home building</string>
    <string name="access_my">Access my</string>
    <string name="home_care_tool">home care tool</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="manuals">MANUALS</string>
    <string name="warranties">WARRANTIES</string>
    <string name="report">REPORT</string>
    <string name="reply_note">Reply Message</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="enter_your_message">Enter message</string>
    <string name="submit">Submit</string>
    <string name="structural_issue_are_things_like">Structural issue are things like..</string>
    <string name="product_warranty_issue_are_things_like">Product warranty issue are things like...</string>
    <string name="other_issue_are_things_like">Other issue are things like..</string>
    <string name="new_issue">New Issue</string>
    <string name="title_of_issue">Title of issue</string>
    <string name="room_in_the_house">Room in the house</string>
    <string name="brief_description">Brief description</string>
    <string name="log_issue">LOG ISSUE</string>
</resources>