<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homecare.reports.SelectYourIssueTypeFragmetn">
   <androidx.appcompat.widget.AppCompatImageView
       android:layout_width="@dimen/_16sdp"
       android:layout_height="@dimen/_16sdp"
       android:src="@drawable/close"
       android:id="@+id/close"
       android:layout_margin="@dimen/_10dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_issue_type"
        android:text="@string/SELECT_YOUR_ISSUE_TYPE"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/orange_bg_3.1"
        android:textAppearance="@style/FontMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/orange_btn_fullcolor"
        android:id="@+id/bt_product_type"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:textColor="@color/white_3.1"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_issue_type"
        android:text="@string/PRODUCT_WARRANTY"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_product_type_dec"
        android:text="@string/product_warranty_issue_are_things_like"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black_bg_3.1"
        android:textAppearance="@style/FontRegular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_product_type"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/orange_btn_fullcolor"
        android:id="@+id/bt_structure_issue"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:textColor="@color/white_3.1"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_type_dec"
        android:text="@string/STRUCTURAL_ISSUE"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_structure_issue_dec"
        android:text="@string/structural_issue_are_things_like"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black_bg_3.1"
        android:textAppearance="@style/FontRegular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_structure_issue"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/orange_btn_fullcolor"
        android:id="@+id/bt_other_issue"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:textColor="@color/white_3.1"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_structure_issue_dec"
        android:text="@string/OTHER_ISSUE"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_other_issue_dec"
        android:text="@string/other_issue_are_things_like"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black_bg_3.1"
        android:textAppearance="@style/FontRegular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_other_issue"
        />
</androidx.constraintlayout.widget.ConstraintLayout>