<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homecare.reports.NewIssueFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:orientation="vertical"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_issue"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/grey_text_font_3.1"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10dp"
            android:id="@+id/title_of_issue"
            android:hint="@string/title_of_issue"
            android:paddingLeft="@dimen/_15dp"
            android:background="@drawable/myplace_edittext_bg"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_5dp"
            android:id="@+id/room_in_the_house"
            android:hint="@string/room_in_the_house"
            android:paddingLeft="@dimen/_15dp"
            android:background="@drawable/myplace_edittext_bg"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_5dp"
            android:id="@+id/brief_description"
            android:gravity="top"
            android:paddingTop="@dimen/_5dp"
            android:hint="@string/brief_description"
            android:paddingStart="@dimen/_15dp"
            android:background="@drawable/myplace_edittext_bg"
            tools:ignore="RtlSymmetry" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/add_images"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="   Add Images(s)"
            android:gravity="left|center"
            android:paddingStart="@dimen/_10dp"
            android:textColor="@color/white_3.1"
            android:backgroundTint="@color/disabled_footer_icon_grey_3.1"
            android:drawableStart="@drawable/add_image_white_36"
            android:background="@drawable/rectangle_orange_bg"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:id="@+id/rv_captured_pics"
            tools:orientation="horizontal"
            tools:listitem="@layout/photo_gallarey_item"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="@dimen/_5dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/log_issue"
            android:gravity="center"
            android:paddingStart="@dimen/_10dp"
            android:textColor="@color/white_3.1"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_orange_bg"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>