<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rectangel_white_button">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange_bg_3.1"
            android:id="@+id/message_header"
            android:text="@string/reply_note"
            android:textAppearance="@style/FontMedium"
            android:layout_gravity="center"
            android:textSize="@dimen/_14ssp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center_vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:text="@string/to" />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etTo"
                android:textSize="@dimen/_12ssp"
                android:layout_width="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:layout_height="@dimen/_35sdp"
                android:textColor="@color/black"
                android:background="@drawable/contact_edit_bg"
                tools:ignore="RtlSymmetry" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/FontMedium"
                android:textSize="@dimen/default_text_size"
                android:visibility="gone"
                android:text="@string/subject" />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSubject"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:textSize="@dimen/_12ssp"
                android:textAppearance="@style/FontMedium"
                android:hint="Enter subject"
                android:paddingStart="@dimen/_10sdp"
                android:textColorHint="@color/disabled_footer_icon_grey_3.1"
                android:textColor="@color/black"
                android:background="@drawable/contact_edit_bg"
                tools:ignore="RtlSymmetry" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_80sdp"
            android:gravity="start"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            android:maxLines="150"
            android:textAppearance="@style/FontMedium"
            android:hint="@string/enter_your_message"
            android:textColorHint="@color/disabled_footer_icon_grey_3.1"
            android:background="@drawable/contact_edit_bg"
            android:layout_marginTop="@dimen/_15sdp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/_20dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="@dimen/default_text_size"
                android:textAppearance="@style/FontMedium"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/rectangel_black_button"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="@dimen/default_text_size"
                android:textAppearance="@style/FontMedium"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/rectangle_submit"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>